--- a/style.css
+++ b/style.css
@@ -26,6 +26,9 @@ body {
     min-height: 100vh;
     font-size: 1rem;
 
+    display: grid;
+    place-items: center;
+
     background: var(--body-bg-color);
 }
 
@@ -33,10 +36,12 @@ body {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
+
+    width: 21cm;
+    height: 29.7cm;
 }
 
 header.main {
-    margin-top: 3.2rem;
     padding-block: 3.2rem;
 
     display: flex;
@@ -50,8 +55,17 @@ header .content {
     align-items: center;
 
     border-radius: .6rem 0 0 .6rem;
-    background: var(--header-bg-color);
     color: var(--font-primary-color);
+    position: relative;
+    overflow: hidden;
+}
+
+header .content img {
+    position: absolute;
+    z-index: -1;
+
+    top: 0;
+    left: 0;
 }
 
 .logo {
@@ -59,7 +73,7 @@ header .content {
 }
 
 .logo img {
-    max-width: 30rem;
+    max-width: 20rem;
     height: 10rem;
 }
 
@@ -228,11 +242,8 @@ footer .page {
 }
 
 @media print {
-    :root {
-        font-size: 50%;
-    }
-
-    .logo img {
-        width: 100%;
+    header.main h1{
+        color: var(--green-secondary);
     }
 }
+
