--- a/style.css
+++ b/style.css
@@ -56,16 +56,7 @@ header .content {
 
     border-radius: .6rem 0 0 .6rem;
     color: var(--font-primary-color);
-    position: relative;
-    overflow: hidden;
-}
-
-header .content img {
-    position: absolute;
-    z-index: -1;
-
-    top: 0;
-    left: 0;
+    background: var(--header-bg-color);
 }
 
 .logo {
@@ -242,8 +233,9 @@ footer .page {
 }
 
 @media print {
-    header.main h1{
-        color: var(--green-secondary);
+    #app {
+        print-color-adjust: exact;
+        -webkit-print-color-adjust: exact;
     }
 }
 
