--- a/style.css
+++ b/style.css
@@ -37,8 +37,7 @@ body {
     flex-direction: column;
     min-height: 100vh;
 
-    width: 21cm;
-    height: 29.7cm;
+    size: 21cm 29.7cm;
 }
 
 header.main {
