--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@
 
 a {
     text-decoration: none;
-    display: block;
+    _display: block;
     color: black;
 }
 
@@ -221,7 +221,17 @@ main .number-page {
     font-weight: 500;
     padding-left: 4px;
 }
-
+.address{
+    width: 100%;
+    display: block;
+    background: var(--header-bg-color);
+    color: #fcfcfc;
+    text-transform: uppercase;
+    text-align: center;
+    align-items: center;
+    padding-top: 5px;
+    
+}
 footer {
     width: 100%;
     height: 6rem;
@@ -232,6 +242,7 @@ footer {
     padding: 1.2rem 5.6rem;
     background: var(--header-bg-color);
 }
+
 
 footer div {
     display: flex;
@@ -254,12 +265,21 @@ footer div p {
     
     line-height: 100%;
 }
+footer .msg {
+    color: var(--font-primary-color);
+    font-size: 1rem;
+    width: 55rem;
+    text-transform: uppercase;    
+    line-height: 100%;
+    font-style: italic;
+}
 
 footer a {
     color: var(--font-primary-color);
-    font-size: 1.8rem;
+    line-height: 100%;
+    /* font-size: 1.8rem;
     font-weight: 600;
-    letter-spacing: 1px;
+    letter-spacing: 1px; */
 }
 
 footer .page {
@@ -284,7 +304,14 @@ footer .page {
 
     border: 1px solid var(--green-secondary);
 }
-
+.top .function{
+    font-weight: lighter;
+    font-style: italic;
+}
+.middle .function{
+    font-weight: lighter;
+    font-style: italic;
+}
 #expediente .top {
     text-align: center;
 
@@ -307,6 +334,7 @@ footer .page {
 #expediente .middle .name-wrapper {
     text-align: center;
     line-height: 100%;
+    
 }
 
 #expediente .bottom {
