--- a/style.css
+++ b/style.css
@@ -24,17 +24,17 @@ a {
 
 body {
     min-height: 100vh;
-    font-size: 1rem;
+    font-size: 10px;
 
     display: grid;
     gap: 1rem;
     place-items: center;
+    padding: 1rem 0;
 
     background: var(--body-bg-color);
 }
 
-#capa,
-#conteudo {
+.content-wrapper {
     display: flex;
     flex-direction: column;
 
@@ -52,8 +52,8 @@ header.main {
 }
 
 header.secondary {
-    margin: 2.4rem 0;
     display: flex;
+    margin-bottom: 3.2rem;
 }
 
 header .content {
@@ -66,6 +66,11 @@ header .content {
     border-radius: .6rem 0 0 .6rem;
     color: var(--font-primary-color);
     background: var(--header-bg-color);
+}
+
+header.secondary .content {
+    border-radius: 0;
+    padding: .8rem 0;
 }
 
 .logo {
@@ -87,14 +92,13 @@ header.main h1 {
 }
 
 header.secondary h1 {
-    color: var(--header-bg-color);
     display: flex;
     flex-direction: column;
     align-self: center;
 
     padding-left: 5.6rem;
     width: 35rem;
-    line-height: 100%;
+    line-height: 60%;
 }
 
 header.main h1::after {
@@ -126,15 +130,15 @@ h1 span:nth-child(3) {
 }
 
 .secondary h1 span:nth-child(1) {
-    font-size: 1.8rem;
+    font-size: 1.2rem;
 }
 
 .secondary h1 span:nth-child(2) {
-    font-size: 2.8rem;
+    font-size: 1.8rem;
 }
 
 .secondary h1 span:nth-child(3) {
-    font-size: 1rem;
+    font-size: .8rem;
 }
 
 .info {
@@ -164,6 +168,11 @@ main {
     padding-inline: 5.6rem;
     padding-bottom: 3.2rem;
     flex: 1;
+}
+
+main:not(#capa main) {
+    height: 946.51px;
+    overflow: hidden;
 }
 
 main h2 {
@@ -223,17 +232,7 @@ main .number-page {
     font-weight: 500;
     padding-left: 4px;
 }
-.address{
-    width: 100%;
-    display: block;
-    background: var(--header-bg-color);
-    color: #fcfcfc;
-    text-transform: uppercase;
-    text-align: center;
-    align-items: center;
-    padding-top: 5px;
-    
-}
+
 footer {
     width: 100%;
     height: 6rem;
@@ -244,7 +243,6 @@ footer {
     padding: 1.2rem 5.6rem;
     background: var(--header-bg-color);
 }
-
 
 footer div {
     display: flex;
@@ -356,18 +354,92 @@ footer .page {
     display: inline;
 }
 
+.column-container {
+    display: flex;
+    justify-content: space-between;
+    gap: 2rem;
+
+    width: 100%;
+    height: 100%;
+}
+
+.column {
+    flex: 1;
+    text-align: justify;
+    overflow: hidden;
+    max-height: 100%;
+}
+
+.column .title {
+    margin-bottom: .8rem;
+    position: relative;
+
+    text-align: center;
+    font-size: 1.2rem;
+
+    margin-bottom: .8rem;
+    color: #556f3f;
+}
+
+.column p {
+    margin-bottom: .4rem;
+}
+
+.bold {
+    font-weight: bold;
+}
+
+.italic {
+    font-style: italic;
+}
+
+.uppercase {
+    text-transform: uppercase;
+}
+
+.code-wrapper {
+    text-align: right;
+    font-style: italic;
+
+    position: relative;
+    margin-bottom: 1.6rem;
+}
+
+.code-wrapper::before {
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: -8px;
+    width: 100%;
+    height: 1.5px;
+    background: #d1cfcf;
+}
+
+.code-wrapper .autor {
+    text-transform: uppercase;
+}
+
+table {
+    flex-shrink: 0;
+    text-align: center;
+    width: 100%;
+
+    font-size: .8rem;
+}
+
+table * {
+    border: 1px solid #2c2a2a;
+}
+
 @media print {
     body {
         print-color-adjust: exact;
         -webkit-print-color-adjust: exact;
-    }
-
-    body {
         gap: 0;
+        padding: 0;
     }
 
-    #capa,
-    #conteudo {
+    .content-wrapper {
         box-shadow: none;
     }
 }
