--- a/style.css
+++ b/style.css
@@ -469,14 +469,19 @@ table {
 }
 
 .final-page .qr-code {
-    width: 20rem;
-    height: 20rem;
+    width: 100%;
 
-    margin: 0 auto 3.2rem;
+    margin: 0 auto 4.8rem;
 }
 
 .final-page .qr-code img {
-    width: 100%;
+    width: 20rem;
+}
+
+.final-page .qr-code .description {
+    position: relative;
+    top: -13px;
+    font-size: 1.2rem;
 }
 
 .final-page .column {
