--- a/style.css
+++ b/style.css
@@ -500,6 +500,8 @@ table {
 .final-page .additional-info {
     width: 70%;
     margin: auto;
+
+    user-select: none;
 }
 
 .final-page .additional-info .wrapper p {
